--- a/css/style.css
+++ b/css/style.css
@@ -553,3 +553,311 @@ video {
   --tw-contain-paint:  ;
   --tw-contain-style:  ;
 }
+
+.container {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+.absolute {
+  position: absolute;
+}
+
+.relative {
+  position: relative;
+}
+
+.left-0 {
+  left: 0px;
+}
+
+.left-\[50\%\] {
+  left: 50%;
+}
+
+.top-0 {
+  top: 0px;
+}
+
+.z-20 {
+  z-index: 20;
+}
+
+.z-30 {
+  z-index: 30;
+}
+
+.z-40 {
+  z-index: 40;
+}
+
+.z-50 {
+  z-index: 50;
+}
+
+.mx-auto {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.block {
+  display: block;
+}
+
+.flex {
+  display: flex;
+}
+
+.h-16 {
+  height: 4rem;
+}
+
+.h-6 {
+  height: 1.5rem;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.w-16 {
+  width: 4rem;
+}
+
+.w-9 {
+  width: 2.25rem;
+}
+
+.w-full {
+  width: 100%;
+}
+
+.translate-x-\[-50\%\] {
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.items-center {
+  align-items: center;
+}
+
+.justify-between {
+  justify-content: space-between;
+}
+
+.gap-8 {
+  gap: 2rem;
+}
+
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
+.border {
+  border-width: 1px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-basecolor {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 153 204 / var(--tw-border-opacity));
+}
+
+.bg-basecolor {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 153 204 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-transparent {
+  background-color: transparent;
+}
+
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
+.text-xs {
+  font-size: 0.75rem;
+  line-height: 1rem;
+}
+
+.font-medium {
+  font-weight: 500;
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.opacity-70 {
+  opacity: 0.7;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+/* hamberger-icon */
+
+.icon{
+  position: relative;
+}
+
+.icon span{
+  position: absolute;
+  height: 3px;
+  width: 100%;
+  top: 0;
+  left: 0;
+  transform: rotate(0deg);
+  background-color: white;
+  transition: all 0.3s ease-out;
+  border-radius: 0px 10px 10px 0px;
+}
+
+.icon .bar2{
+  width: 85%;
+  transform: translateY(11px);
+}
+
+.icon .bar3{
+  width: 75%;
+  transform: translateY(22px);
+}
+
+.iconopen .bar1{
+  transform: rotate(45deg) translateY(10px) translateX(10px);
+  border-radius: 10px;
+}
+
+.iconopen .bar2{
+  width: 100%;
+  transform: rotate(-45deg) translateY(10px) translateX(-10px);
+  border-radius: 10px;
+}
+
+.iconopen .bar3{
+  display: none;
+}
+
+/* On mouse enter change the color of hamgerber bars */
+
+.barsInvert{
+  background-color: #0099CC;
+  transition: all 0.5s;
+}
+
+/* Location icon */
+
+.location{
+  color: #fff;
+  transition: all 0.5s;
+}
+
+.location:hover{
+  color: #0099CC;
+}
+
+/* On mouse enter change the color of location icon */
+
+.locationInvert{
+  color: #0099CC;
+  transition: all 0.5s;
+}
+
+/* On mouse enter change the navigation background color */
+
+.navigation-background{
+  background-color: white;
+  transition: all 0.5s;
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.hover\:text-basecolor:hover {
+  --tw-text-opacity: 1;
+  color: rgb(0 153 204 / var(--tw-text-opacity));
+}
+
+@media (min-width: 768px) {
+  .md\:text-base {
+    font-size: 1rem;
+    line-height: 1.5rem;
+  }
+}
