--- a/css/style.css
+++ b/css/style.css
@@ -578,30 +578,6 @@ video {
   top: 0px;
 }
 
-.top-\[4\.8rem\] {
-  top: 4.8rem;
-}
-
-.top-\[4\.9rem\] {
-  top: 4.9rem;
-}
-
-.top-\[4rem\] {
-  top: 4rem;
-}
-
-.top-\[4\.2rem\] {
-  top: 4.2rem;
-}
-
-.top-\[4\.5rem\] {
-  top: 4.5rem;
-}
-
-.top-\[4\.rem\] {
-  top: 4.rem;
-}
-
 .top-\[4\.3rem\] {
   top: 4.3rem;
 }
@@ -742,16 +718,20 @@ video {
   gap: 0.5rem;
 }
 
-.gap-8 {
-  gap: 2rem;
-}
-
 .gap-4 {
   gap: 1rem;
 }
 
+.gap-8 {
+  gap: 2rem;
+}
+
 .overflow-hidden {
   overflow: hidden;
+}
+
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-lg {
@@ -760,10 +740,6 @@ video {
 
 .border-2 {
   border-width: 2px;
-}
-
-.border {
-  border-width: 1px;
 }
 
 .border-b-2 {
@@ -838,11 +814,6 @@ video {
   padding-bottom: 2rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -866,6 +837,16 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
