--- a/TailwindDirectrives.css
+++ b/TailwindDirectrives.css
@@ -71,3 +71,16 @@
     background-color: white;
     transition: all 0.5s;
 }
+/* Hiding mobile menu sections */
+/* .hideSection{
+    transform: translateY(-120%);
+    transition: all 0.3s;
+    display: none;
+} */
+.hideSection {
+    max-height: 0vh;
+    opacity: 0;
+    overflow: hidden;
+    transform: translateY(-10px); /* Slight upward shift for smooth effect */
+    transition: max-height 0.3s ease-in-out, opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
