--- a/tailwinddirectives.css
+++ b/tailwinddirectives.css
@@ -2,6 +2,15 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Prevent text selection */
+.no-select {
+    user-select: none;
+    -webkit-user-select: none; /* Safari */
+    -moz-user-select: none; /* Firefox */
+    -ms-user-select: none; /* IE */
+}
+
+
 /* hamberger-icon */
 .icon{
     position: relative;
